--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Online image editor</title>
+    <title>Edytor zdjęć online</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
@@ -14,99 +14,116 @@
 <body>
     <nav class="navbar navbar-dark bg-info mb-5">
         <div class="container">
-            <a href="#" class="navbar-brand">Online Image Editor</a>
+            <a href="#" class="navbar-brand">Edytor zdjęć online</a>
         </div>
     </nav>
-
     <div class="container">
         <div class="row">
-            <div class="col-md-10 m-auto">
+            <div class="col-md-8 m-auto">
                 <div class="custom-file mb-3">
-                    <input type="text" class="custom-file-input" id="upload-file">
-                    <label for="upload-file" class="custom-file-label">Choose image...</label>
+                    <input type="file" class="custom-file-input" id="upload-file">
+                    <label for="upload-file" class="custom-file-label">Wybierz obraz</label>
                 </div>
                 <canvas id="canvas"></canvas>
 
-                <h4 class="text-center my-3">Filters</h4>
-                <div class="row text-center my4">
+                <h4 class="text-center my-3">Filtry</h4>
+
+                <div class="row my-4 text-center">
                     <div class="col-md-3">
                         <div class="btn-group btn-group-sm">
-                            <button class="filter-btn brightness-remove btn btn-inf0">-</button>
-                            <button class="btn btn-secondary btn-disabled" disabled>Brightness</button>
-                            <button class="filter-btn brightness-add btn btn-inf0">+</button>
+                            <button class="filter-btn brightness-remove btn btn-info">-</button>
+                            <button class="btn btn-secondary btn-disabled" disabled>Jasość</button>
+                            <button class="filter-btn brightness-add btn btn-info">+</button>
                         </div>
                     </div>
+
                     <div class="col-md-3">
                         <div class="btn-group btn-group-sm">
-                            <button class="filter-btn contrast-remove btn btn-inf0">-</button>
-                            <button class="btn btn-secondary btn-disabled" disabled>Contrast</button>
-                            <button class="filter-btn contrast-add btn btn-inf0">+</button>
+                            <button class="filter-btn contrast-remove btn btn-info">-</button>
+                            <button class="btn btn-secondary btn-disabled" disabled>Kontrast</button>
+                            <button class="filter-btn contrast-add btn btn-info">+</button>
                         </div>
                     </div>
+
                     <div class="col-md-3">
                         <div class="btn-group btn-group-sm">
-                            <button class="filter-btn saturation-remove btn btn-inf0">-</button>
-                            <button class="btn btn-secondary btn-disabled" disabled>Saturation</button>
-                            <button class="filter-btn saturation-add btn btn-inf0">+</button>
+                            <button class="filter-btn saturation-remove btn btn-info">-</button>
+                            <button class="btn btn-secondary btn-disabled" disabled>Nasycenie</button>
+                            <button class="filter-btn saturation-add btn btn-info">+</button>
                         </div>
                     </div>
+
                     <div class="col-md-3">
                         <div class="btn-group btn-group-sm">
-                            <button class="filter-btn vibrance-remove btn btn-inf0">-</button>
-                            <button class="btn btn-secondary btn-disabled" disabled>Vibrance</button>
-                            <button class="filter-btn vibrance-add btn btn-inf0">+</button>
+                            <button class="filter-btn vibrance-remove btn btn-info">-</button>
+                            <button class="btn btn-secondary btn-disabled" disabled>Wibrancja</button>
+                            <button class="filter-btn vibrance-add btn btn-info">+</button>
                         </div>
                     </div>
                 </div>
+                <!-- ./row -->
 
+                <h4 class="text-center my-3">Efekty</h4>
+
+                <div class="row mb-3">
+                    <div class="col-md-3">
+                        <button class="filter-btn vintage-add btn btn-dark btn-block">
+                            Vintage
+                        </button>
+                    </div>
+                    <div class="col-md-3">
+                        <button class="filter-btn lomo-add btn btn-dark btn-block">
+                            Lomo
+                        </button>
+                    </div>
+                    <div class="col-md-3">
+                        <button class="filter-btn clarity-add btn btn-dark btn-block">
+                            Clarity
+                        </button>
+                    </div>
+                    <div class="col-md-3">
+                        <button class="filter-btn sincity-add btn btn-dark btn-block">
+                            Sin City
+                        </button>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-3">
+                        <button class="filter-btn crossprocess-add btn btn-dark btn-block">
+                            Cross Process
+                        </button>
+                    </div>
+                    <div class="col-md-3">
+                        <button class="filter-btn pinhole-add btn btn-dark btn-block">
+                            Pinhole
+                        </button>
+                    </div>
+                    <div class="col-md-3">
+                        <button class="filter-btn nostalgia-add btn btn-dark btn-block">
+                            Nostalgia
+                        </button>
+                    </div>
+                    <div class="col-md-3">
+                        <button class="filter-btn hermajesty-add btn btn-dark btn-block">
+                            Her Majesty
+                        </button>
+                    </div>
+                </div>
+
+                <div class="row mt-5 buttons">
+                    <div class="col-md-6">
+                        <button id="download-btn" class="btn btn-primary btn-block">Skończyłem, chcę pobrać obraz</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button id="revert-btn" class="btn btn-danger btn-block">Chcę zacząć od nowa</button>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <!---->
-
-        <h4 class="text-center my-3">Effects</h4>
-        <div class="row mb-3">
-            <div class="col-md-3">
-                <button class="filter-btn vintage-add btn btn-dark btn-block">Vintage</button>
-            </div>
-            <div class="col-md-3">
-                <button class="filter-btn lomo-add btn btn-dark btn-block">Lomo</button>
-            </div>
-            <div class="col-md-3">
-                <button class="filter-btn clarity-add btn btn-dark btn-block">Clarity</button>
-            </div>
-            <div class="col-md-3">
-                <button class="filter-btn sincity-add btn btn-dark btn-block">Sincity</button>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-md-3">
-                <button class="filter-btn crossprocess-add btn btn-dark btn-block">Cross Process</button>
-            </div>
-            <div class="col-md-3">
-                <button class="filter-btn pinhole-add btn btn-dark btn-block">Pinhole</button>
-            </div>
-            <div class="col-md-3">
-                <button class="filter-btn nostalgia-add btn btn-dark btn-block">Nostalgia</button>
-            </div>
-            <div class="col-md-3">
-                <button class="filter-btn hermajesty-add btn btn-dark btn-block">Her Majesty</button>
-            </div>
-        </div>
-
-        <div class="row my-5">
-            <div class="col-md-6">
-                <button id="download-btn" class="btn btn-primary btn-block">Download</button>
-            </div>
-            <div class="col-md-6">
-                <button id="revert-btn" class="btn btn-danger btn-block">Remove Filters</button>
-            </div>
-
-        </div>
-
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.js"></script>
-<script src="main.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
